# GolaemForHoudini

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cfg/cmake/: FindFbxSdk.cmake
doc/CLA/: AutodeskOpenSourceContributionLicensingAgreement_Corp.docx  AutodeskOpenSourceContributionLicensingAgreement_Individual.docx
python/glm/simCacheLib/: simCacheLibWindowHoudiniWrapper.py
python/glm/ui/: windowHoudiniLauncher.py  windowHoudiniWrapper.py
shelf/: Golaem.shelf
src/: glmCrowdHoudiniPluginAPI.h  glmHoudini.h
src/procedural/: GR_PackedGolaemEntity.cpp  GR_PackedGolaemEntity.h  GT_PackedGolaemEntity.cpp  GT_PackedGolaemEntity.h  GU_PackedGolaemEntity.cpp  GU_PackedGolaemEntity.h  SOP_GolaemCacheProxy.cpp
src/utils/: glmHoudiniUtils.cpp  glmHoudiniUtils.h
